src/assets/css/styles.css
/* ... */
.group:hover .jp-controls {
	opacity: 1;
}

.jp-button button {
	margin: 0.375rem;
	display: flex;
	height: 2.5rem;
	width: 2.5rem;
	align-items: center;
	justify-content: center;
	border-radius: 9999px;
	--tw-text-opacity: 1;
	color: rgba(255, 255, 255, var(--tw-text-opacity));
	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
	--tw-ring-color: currentColor;
	transition-property: background-color, border-color, color, fill, stroke;
	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
	transition-duration: 150ms;
}

.jp-button button:hover {
	--tw-text-opacity: 1;
	color: rgba(220, 38, 38, var(--tw-text-opacity));
}

.jp-button svg {
	height: 1.5rem;
	width: 1.5rem;
}

.jp-button span {
	position: absolute;
	width: 1px;
	height: 1px;
	padding: 0;
	margin: -1px;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
	white-space: nowrap;
	border-width: 0;
}

div.jp-playlist {
	border-top-width: 1px;
	--tw-border-opacity: 1;
	border-color: rgba(212, 212, 216, var(--tw-border-opacity));
	--tw-bg-opacity: 1;
	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
	font-size: 0.75rem;
	line-height: 1rem;
}

div.jp-playlist li {
	border-bottom-width: 1px;
	--tw-border-opacity: 1;
	border-color: rgba(212, 212, 216, var(--tw-border-opacity));
}

div.jp-playlist li:last-child {
	border-width: 0px;
}

div.jp-playlist a {
	display: block;
	padding-left: 1.25rem;
	padding-right: 1.25rem;
	padding-top: 0.75rem;
	padding-bottom: 0.75rem;
}

div.jp-playlist a:hover {
	--tw-bg-opacity: 1;
	background-color: rgba(244, 244, 245, var(--tw-bg-opacity));
}

.playlist-hide .jp-playlist {
	position: absolute;
	left: 0px;
	right: 0px;
	top: 100%;
}

.playlist-bottom .jp-audio {
	overflow: visible;
}

.playlist-bottom .jp-playlist {
	display: block;
}

.playlist-scroll .jp-audio {
	overflow: auto;
}

.playlist-scroll .jp-playlist {
	position: absolute;
	left: 0px;
	right: 0px;
	top: 100%;
	display: block;
}

.audio-player.playlist-side {
	width: 100%;
	max-width: 28rem;
	padding-right: 14rem;
}

.audio-player.playlist-side .jp-audio {
	overflow: visible;
}

.audio-player.playlist-side .jp-interface {
	position: relative;
	z-index: 20;
}

.audio-player.playlist-side .jp-playlist {
	width: 100%;
	overflow: auto;
	border-top-width: 0px;
	transition-property: all;
	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
	transition-duration: 150ms;
	position: absolute;
	top: 0px;
	left: 14rem;
	z-index: 10;
	height: 100%;
	width: 14rem;
	border-left-width: 1px;
}

.track-poster {
	--tw-bg-opacity: 1;
	background-color: rgba(24, 24, 27, var(--tw-bg-opacity));
}

.track-title, .track-artist, .track-record {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
	padding-left: 1.25rem;
	padding-right: 1.25rem;
}

.track-title {
	margin-top: 0.75rem;
	font-size: 0.875rem;
	line-height: 1.25rem;
	font-weight: 700;
	--tw-text-opacity: 1;
	color: rgba(24, 24, 27, var(--tw-text-opacity));
}

.track-artist {
	margin-top: 1px;
	font-size: 0.75rem;
	line-height: 1rem;
	font-weight: 500;
	--tw-text-opacity: 1;
	color: rgba(24, 24, 27, var(--tw-text-opacity));
}

.track-record {
	margin-top: 1px;
	margin-bottom: 0.75rem;
	font-size: 0.75rem;
	line-height: 1rem;
}

.jp-button-play button {
	height: 3.5rem;
	width: 3.5rem;
	--tw-ring-inset: inset;
}

.jp-button-play svg {
	height: 100%;
	width: 100%;
}

.jp-button-play .svg-pause {
	display: none;
}

.jp-state-playing .jp-button-play .svg-play {
	display: none;
}

.jp-state-playing .jp-button-play .svg-pause {
	display: block;
}

.jp-button-playlist {
	display: none;
}

/* The following styles cannot be placed within the @layer Component otherwise the styles will not get output. I think this may have something to do with Tailwind's JIT engine and the elements not being on the page initially. */

.jp-playlist-item {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.jp-state-playing .jp-playlist-current {
	--tw-bg-opacity: 1;
	background-color: rgba(244, 244, 245, var(--tw-bg-opacity));
	--tw-text-opacity: 1;
	color: rgba(24, 24, 27, var(--tw-text-opacity));
}

.jp-artist, .jp-free-media, .jp-playlist-item-remove {
	display: none;
}

.jp-time-rail {
	position: absolute;
	bottom: 0px;
	left: 0px;
	right: 0px;
	z-index: 30;
	--tw-bg-opacity: 1;
	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
	--tw-bg-opacity: 0.2;
}

.jp-time-rail .jp-progress {
	height: 0.5rem;
	width: 100%;
}

.jp-time-rail .jp-seek-bar:hover {
	cursor: pointer;
}

.jp-time-rail .jp-play-bar {
	height: 0.5rem;
	--tw-bg-opacity: 1;
	background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
	--tw-bg-opacity: 0.9;
}

/**
 * Utilites
 * -----------------------------------------------------------------------------
 */

.m-auto {
	margin: auto;
}

.mb-12 {
	margin-bottom: 3rem;
}

.mt-6 {
	margin-top: 1.5rem;
}

.mt-3 {
	margin-top: 0.75rem;
}

.mt-12 {
	margin-top: 3rem;
}

.block {
	display: block;
}

.flex {
	display: flex;
}

.h-0 {
	height: 0px;
}

.w-0 {
	width: 0px;
}

.max-w-lg {
	max-width: 32rem;
}

.justify-center {
	justify-content: center;
}

.space-x-2 > :not([hidden]) ~ :not([hidden]) {
	--tw-space-x-reverse: 0;
	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
}

.bg-gray-100 {
	--tw-bg-opacity: 1;
	background-color: rgba(244, 244, 245, var(--tw-bg-opacity));
}

.px-5 {
	padding-left: 1.25rem;
	padding-right: 1.25rem;
}

.py-12 {
	padding-top: 3rem;
	padding-bottom: 3rem;
}

.text-center {
	text-align: center;
}

.text-3xl {
	font-size: 1.875rem;
	line-height: 2.25rem;
}

.text-xl {
	font-size: 1.25rem;
	line-height: 1.75rem;
}

.text-sm {
	font-size: 0.875rem;
	line-height: 1.25rem;
}

.font-bold {
	font-weight: 700;
}
/* ... */

